--- a/app/globals.css
+++ b/app/globals.css
@@ -116,7 +116,16 @@
   * {
     @apply border-border outline-ring/50;
   }
+
   body {
     @apply bg-background text-foreground;
   }
+}
+
+@utility gradient {
+  @apply bg-gradient-to-b from-emerald-500 to-teal-400;
+}
+
+@utility gradient-title {
+  @apply gradient font-bold text-transparent bg-clip-text pb-1 pr-2;
 }
